# visionflow

./: .gitignore  README.md  blob_filter.py  docker-compose.dev.yml  env.example  pyproject_filter.py  requirements_llava.txt  runpod_setup_script.sh  scenarix_ai_workbench_analysis.md  test_main.py
visionflow/: .env.backup  .gitignore  Dockerfile.runpod  Dockerfile.simple  Dockerfile.wan  REMOTE_WAN_INTEGRATION.md  dev.sh  docker-compose.remote-wan.yml  docker-compose.test.yml  docker-compose.yml  enhanced-dashboard.json  evaluate_large_scale_dataset.py  evaluate_large_scale_robust.py  evaluation_dashboard.json  evaluation_dashboard_enhanced.json  evaluation_metrics_config.yml  evaluation_metrics_enhancement.py  evaluation_viewer.html  human_review_dashboard.html  import_dashboard.py  import_enhanced_dashboard.py  prometheus_evaluation_config.yml  pyproject.toml  quick_generation_service.py  quick_start_runpod.sh  remote-wan.env.example  requirements.txt  requirements_ml_evaluation.txt  requirements_production.txt  requirements_production_minimal.txt  review_api_server.py  review_workflow_service.py  setup_remote_wan.py  start_review_workflow.py  test_animation_quality_scenario1.py  test_animation_quality_with_existing_dataset.py  test_api.py  test_api_integration.py  test_dataset_evaluation.py  test_evaluation_metrics.py  (+14 more)
visionflow/.github/workflows/: gcp-deploy.yml
visionflow/config/: remote_execution_config.yaml
visionflow/docker/: Dockerfile.api  Dockerfile.api.full  Dockerfile.api.minimal  Dockerfile.api.optimized  Dockerfile.evaluation  Dockerfile.evaluation-worker  Dockerfile.gcp-tracking  Dockerfile.generation.health  Dockerfile.grafana.custom  Dockerfile.orchestration.health  Dockerfile.orchestrator  Dockerfile.orchestrator.minimal  prometheus.yml
visionflow/docs/: requirements_industry_metrics.txt
visionflow/evaluation_datasets/: evaluation_test_report.json
visionflow/evaluation_datasets/evaluation_criteria/: comprehensive_criteria.json
visionflow/evaluation_datasets/large_scale_samples/: dataset_manifest.json  evaluation_results.json
visionflow/evaluation_datasets/prompts/: evaluation_prompts.json
visionflow/gcp/: __init__.py  setup.py
visionflow/helm/evaluation-dashboard/: Chart.yaml  (+1 more)
visionflow/k8s/: api-deployment.yaml  api-with-code-copy.yaml  api-with-volume-mount.yaml  configmap.yaml  dashboard-import-job.yaml  evaluation-dashboard-configmap.yaml  evaluation-dashboard-import-job.yaml  gcp-tracking-deployment.yaml  gpu-worker-deployment.yaml  grafana-startup-script.yaml  grafana-with-init.yaml  grafana-with-sidecar.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  orchestration-deployment.yaml  postgres-deployment.yaml  rbac.yaml  redis-deployment.yaml  setup-secrets.sh
visionflow/old/: Dockerfile.api  Dockerfile.generation  Dockerfile.generation.minimal  deploy-local.sh  deploy-macos.sh  deploy.sh  docker-compose.dev.yml  docker-compose.local-cpu.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yml
visionflow/scripts/: build-images.sh  create_test_dataset.py  deploy-k8s-local.sh  deploy_evaluation_dashboard.py  dev-env-manager.sh  dev-port-forward.sh  download_evaluation_datasets.py  download_evaluation_videos.py  download_test_videos.py  expand_test_dataset.py  gcp-setup.sh  import_dashboard_direct.py  import_enhanced_dashboard.py  integrate_evaluation_metrics.py  manage_resources.py  metadata_migration.py  run_extended_evaluation.py  runpod_data_persistence.py  runpod_handler.py  runpod_startup.py  setup.sh  setup_evaluation_dashboard.py  setup_runpod.py  sync_to_runpod.sh  test-k8s-local.sh  test-local-setup.sh  test-monitoring-dashboard.sh  test_evaluation_with_existing_videos.py  test_high_quality_generation.py  test_wan_generation.py
visionflow/terraform/: .gitignore  .terraform.lock.hcl  AWS_MINIMAL_README.md  README.md  SPOT_INSTANCES_README.md  aws-secrets.tfvars.example  aws.tfvars.example  deploy-s3-buckets.sh  main.tf  outputs.tf  s3-bucket.tf  ssm-update-document.json  ssm-update-instance.sh  terraform.tfvars.example  update-running-instance.sh  user-data-old.sh  user-data.sh  variables.tf
visionflow/visionflow/: tasks.py  worker.py
(+141 files in other folders)
